# sudokuhelp

./: .gitignore  Makefile.am  README  acinclude.m4  aminclude.am  clean.sh  configure.ac  doxygen.cfg
src/: detect.c  detect.h  draw.c  draw.h  globals.h  main.c  setup.c  setup.h  sort.c  sort.h
