AC_INIT([Sudoku Helper], [1.0], [maxifoo@gmail.com], [sudokuhelp], [https:/github.com/spekkio/sudokuhelp])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC_STDC
AM_PROG_CC_C_O
PKG_CHECK_MODULES([DEPS], [ncurses >= 5.9.20110404])
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_C_CONST
AC_CHECK_HEADER(ncurses.h)
AC_CHECK_FUNCS([printf])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT